src/test/deca/codegen/invalid/stackoverflow_obj_decl.deca
// Description:
//    Allocation récurive qui devrait fait un stackoverflow.
//
// Resultats:
//    Erreur : La pile est pleine.
//

class A {
   A a = new A();
}

{
   A a = new A();
}

